Exercise_4/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: league
---
apiVersion: v1
kind: Namespace
metadata:
  name: fruits
