Exercise_4/serviceManifest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    sport: football
  name: football
  namespace: league
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 5000
  selector:
    sport: football
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    store: supermarket
  name: fruiteria
  namespace: fruits
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 5000
  selector:
    store: supermarket
  type: NodePort
